--- a/src/Futurum.WebApiEndpoint.Micro.Core.Extensions/Futurum.WebApiEndpoint.Micro.Core.Extensions.csproj
+++ b/src/Futurum.WebApiEndpoint.Micro.Core.Extensions/Futurum.WebApiEndpoint.Micro.Core.Extensions.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <OutputType>Library</OutputType>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <IsPackable>true</IsPackable>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -31,10 +32,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="11.5.1"/>
+        <PackageReference Include="FluentValidation" Version="11.8.1" />
         <PackageReference Include="Futurum.Core" Version="1.0.16"/>
-        <PackageReference Include="Futurum.Microsoft.Extensions.DependencyInjection" Version="1.0.11" />
-        <PackageReference Include="Futurum.WebApiEndpoint.Micro" Version="1.0.6-alpha.0.1" />
+        <PackageReference Include="Futurum.Microsoft.Extensions.DependencyInjection" Version="1.0.12-alpha.0.4" />
+        <PackageReference Include="Futurum.WebApiEndpoint.Micro" Version="1.0.6-alpha.0.4" />
+        <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" />
+        <PackageReference Update="MinVer" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
