--- a/src/Futurum.WebApiEndpoint.Micro.Core.Extensions/Futurum.WebApiEndpoint.Micro.Core.Extensions.csproj
+++ b/src/Futurum.WebApiEndpoint.Micro.Core.Extensions/Futurum.WebApiEndpoint.Micro.Core.Extensions.csproj
@@ -34,8 +34,8 @@
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.8.1" />
         <PackageReference Include="Futurum.Core" Version="1.0.16"/>
-        <PackageReference Include="Futurum.Microsoft.Extensions.DependencyInjection" Version="1.0.12-alpha.0.4" />
-        <PackageReference Include="Futurum.WebApiEndpoint.Micro" Version="1.0.6-alpha.0.4" />
+        <PackageReference Include="Futurum.Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
+        <PackageReference Include="Futurum.WebApiEndpoint.Micro" Version="2.0.2" />
         <PackageReference Update="Microsoft.SourceLink.GitHub" Version="8.0.0" />
         <PackageReference Update="MinVer" Version="4.3.0" />
     </ItemGroup>
